# titanic-ml-pipeline

./: .gitignore  PYPI_README.md  README.md  ml_practice.ipynb  pyproject.toml  titanic_pipeline_run.py
.github/workflows/: publish.yml
titanic_pipeline/: __init__.py  pipeline.py
