[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "titanic-pipeline"
version = "0.1.8"
description = "A classical ML pipeline for the Titanic survival dataset — EDA, preprocessing, feature engineering, model selection, evaluation, and hyperparameter tuning."
readme = "PYPI_README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["titanic", "machine-learning", "pipeline", "sklearn", "classification"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/your-username/titanic-pipeline"

[tool.setuptools.packages.find]
where = ["."]
include = ["titanic_pipeline*"]
